--- a/www/maqueta/style.css
+++ b/www/maqueta/style.css
@@ -300,7 +300,7 @@ a.link_wrapper {color: inherit; text-decoration: none;}
 .quiniela_single .props .prop .opcion_prop input {float: left;}
 .quiniela_single .props .prop .opcion_prop img {float: left;}
 .quiniela_single .props .prop .opcion_prop span {float: left;}
-.quiniela_single .props .prop .dos_opciones .opcion_prop {width: 50%; text-align: center; float: left;}
+.quiniela_single .props .prop .dos_opciones .opcion_prop {width: 50%; text-align: center; float: left; position: relative;}
 .quiniela_single .props .prop .dos_opciones .opcion_prop:first-child {padding-left: 25%;}
 .quiniela_single .props .prop .dos_opciones .opcion_prop:first-child input {margin-right: 10px;}
 .quiniela_single .props .prop .dos_opciones .opcion_prop:last-child {padding-left: 15%;}
@@ -324,13 +324,16 @@ a.link_wrapper {color: inherit; text-decoration: none;}
 .quiniela_single .desempates .desempate.desempate_tres .desempate_input input[type="radio"] {width: 30px; float: left; margin-right: 5px; margin-top: 10px; }
 
 .radio_group input[type=radio] {position: absolute; visibility: hidden;}
-.radio_group input[type=radio]:checked ~ .check { border: 5px solid #598D16;}
-.radio_group input[type=radio]:checked ~ .check::before{ background: #598D16;}
+.radio_group input[type=radio]:checked ~ .check { border: 5px solid #598D16!important;}
+.radio_group input[type=radio]:checked ~ .check::before{ background: #598D16!important;}
 .radio_group label{display: inline-block; width: 84%; height: 2rem; position: relative; font-weight: 300; font-size: 12px; padding: 2px 2px 2px 8px; margin: 0 auto 0 -2rem; z-index: 9; cursor: pointer; -webkit-transition: all 0.25s linear;}
 .local.radio_group .check {display: block; position: absolute; border: 5px solid #AAAAAA; border-radius: 100%; height: 25px; width: 25px; left: -5px; z-index: 8; transition: border .25s linear; -webkit-transition: border .25s linear;}
 .visitante.radio_group .check {display: block; position: absolute; border: 5px solid #AAAAAA; border-radius: 100%; height: 25px; width: 25px; right: 0px; z-index: 8; transition: border .25s linear; -webkit-transition: border .25s linear;}
 .empate.radio_group .check {display: block; position: absolute; border: 5px solid #AAAAAA; border-radius: 100%; height: 25px; width: 25px; left: 35%; z-index: 8; transition: border .25s linear; -webkit-transition: border .25s linear;}
-.radio_group .check::before { display: block; position: absolute; content: ''; border-radius: 100%; height: 10.5px; width: 10.5px; top: 2px; left: 2px; margin: auto; transition: background 0.25s linear; -webkit-transition: background 0.25s linear; }
+.quiniela_single .props .prop .dos_opciones .opcion_prop.radio_group:first-child .check::before { display: block; position: absolute; content: ''; border-radius: 100%; height: 10.5px; width: 10.5px; top: 2px; left: 2px; margin: auto; transition: background 0.25s linear; -webkit-transition: background 0.25s linear; }
+.quiniela_single .props .prop .dos_opciones .opcion_prop.radio_group:first-child .check {display: block; position: absolute; border: 5px solid #AAAAAA; border-radius: 100%; height: 25px; width: 25px; top: 5px; left: 30%; z-index: 8; transition: border .25s linear; -webkit-transition: border .25s linear;}
+.quiniela_single .props .prop .dos_opciones .opcion_prop.radio_group:last-child .check::before { display: block; position: absolute; content: ''; border-radius: 100%; height: 10.5px; width: 10.5px; top: 2px; left: 2px; margin: auto; transition: background 0.25s linear; -webkit-transition: background 0.25s linear; }
+.quiniela_single .props .prop .dos_opciones .opcion_prop.radio_group:last-child .check {display: block; position: absolute; border: 5px solid #AAAAAA; border-radius: 100%; height: 25px; width: 25px; top: 5px; left: 13%; z-index: 8; transition: border .25s linear; -webkit-transition: border .25s linear;}
 
 
 .quiniela_single .quiniela_registro_overlay {position: fixed; top: 0px; padding-top: 200px; width: 95%; background: url('images/bg_trans_negro.png') repeat;  }
