--- a/www/maqueta/style.css
+++ b/www/maqueta/style.css
@@ -305,9 +305,9 @@ a.link_wrapper {color: inherit; text-decoration: none;}
 .quiniela_single .props .prop .dos_opciones .opcion_prop:first-child input {margin-right: 10px;}
 .quiniela_single .props .prop .dos_opciones .opcion_prop:last-child {padding-left: 15%;}
 .quiniela_single .props .prop .dos_opciones .opcion_prop:last-child input {margin-right: 10px;}
-.quiniela_single .props .prop .tres_opciones .opcion_prop {width: 33.33%; text-align: center; float: left; padding-left: 5%;}
+.quiniela_single .props .prop .tres_opciones .opcion_prop {position: relative; width: 33.33%; text-align: center; float: left; padding-left: 5%;}
 .quiniela_single .props .prop .tres_opciones .opcion_prop input {margin-right: 10px;}
-.quiniela_single .props .prop .tres_opciones .opcion_prop img {margin-right: 10px;}
+.quiniela_single .props .prop .tres_opciones .opcion_prop img {margin-right: 5px; margin-left: 33%;}
 .quiniela_single .props .prop .cuatro_opciones .opcion_prop {width: 25%; text-align: center; float: left; padding-left: 2.5%;}
 .quiniela_single .props .prop .cuatro_opciones .opcion_prop input {margin-right: 5px;}
 .quiniela_single .props .prop .cuatro_opciones .opcion_prop img {margin-right: 5px;}
@@ -327,14 +327,21 @@ a.link_wrapper {color: inherit; text-decoration: none;}
 .radio_group input[type=radio]:checked ~ .check { border: 5px solid #598D16!important;}
 .radio_group input[type=radio]:checked ~ .check::before{ background: #598D16!important;}
 .radio_group label{display: inline-block; width: 84%; height: 2rem; position: relative; font-weight: 300; font-size: 12px; padding: 2px 2px 2px 8px; margin: 0 auto 0 -2rem; z-index: 9; cursor: pointer; -webkit-transition: all 0.25s linear;}
-.local.radio_group .check {display: block; position: absolute; border: 5px solid #AAAAAA; border-radius: 100%; height: 25px; width: 25px; left: -5px; z-index: 8; transition: border .25s linear; -webkit-transition: border .25s linear;}
-.visitante.radio_group .check {display: block; position: absolute; border: 5px solid #AAAAAA; border-radius: 100%; height: 25px; width: 25px; right: 0px; z-index: 8; transition: border .25s linear; -webkit-transition: border .25s linear;}
-.empate.radio_group .check {display: block; position: absolute; border: 5px solid #AAAAAA; border-radius: 100%; height: 25px; width: 25px; left: 35%; z-index: 8; transition: border .25s linear; -webkit-transition: border .25s linear;}
-.quiniela_single .props .prop .dos_opciones .opcion_prop.radio_group:first-child .check::before { display: block; position: absolute; content: ''; border-radius: 100%; height: 10.5px; width: 10.5px; top: 2px; left: 2px; margin: auto; transition: background 0.25s linear; -webkit-transition: background 0.25s linear; }
-.quiniela_single .props .prop .dos_opciones .opcion_prop.radio_group:first-child .check {display: block; position: absolute; border: 5px solid #AAAAAA; border-radius: 100%; height: 25px; width: 25px; top: 5px; left: 30%; z-index: 8; transition: border .25s linear; -webkit-transition: border .25s linear;}
-.quiniela_single .props .prop .dos_opciones .opcion_prop.radio_group:last-child .check::before { display: block; position: absolute; content: ''; border-radius: 100%; height: 10.5px; width: 10.5px; top: 2px; left: 2px; margin: auto; transition: background 0.25s linear; -webkit-transition: background 0.25s linear; }
-.quiniela_single .props .prop .dos_opciones .opcion_prop.radio_group:last-child .check {display: block; position: absolute; border: 5px solid #AAAAAA; border-radius: 100%; height: 25px; width: 25px; top: 5px; left: 13%; z-index: 8; transition: border .25s linear; -webkit-transition: border .25s linear;}
 
+.local.radio_group .check {display: block; position: absolute; border: 5px solid #AAAAAA; border-radius: 100%; height: 25px; width: 25px; left: -5px; z-index: 8; transition: border .25s linear; -webkit-transition: border .25s linear;}
+.local.radio_group .check::before { display: block; position: absolute; content: ''; border-radius: 100%; height: 10.5px; width: 10.5px; top: 2px; left: 2px; margin: auto; transition: background 0.25s linear; -webkit-transition: background 0.25s linear; }
+.visitante.radio_group .check {display: block; position: absolute; border: 5px solid #AAAAAA; border-radius: 100%; height: 25px; width: 25px; right: 0px; z-index: 8; transition: border .25s linear; -webkit-transition: border .25s linear;}
+.visitante.radio_group .check::before { display: block; position: absolute; content: ''; border-radius: 100%; height: 10.5px; width: 10.5px; top: 2px; left: 2px; margin: auto; transition: background 0.25s linear; -webkit-transition: background 0.25s linear; }
+.empate.radio_group .check {display: block; position: absolute; border: 5px solid #AAAAAA; border-radius: 100%; height: 25px; width: 25px; left: 35%; z-index: 8; transition: border .25s linear; -webkit-transition: border .25s linear;}
+.empate.radio_group .check::before { display: block; position: absolute; content: ''; border-radius: 100%; height: 10.5px; width: 10.5px; top: 2px; left: 2px; margin: auto; transition: background 0.25s linear; -webkit-transition: background 0.25s linear; }
+
+.dos_opciones .opcion_prop.radio_group:first-child .check::before { display: block; position: absolute; content: ''; border-radius: 100%; height: 10.5px; width: 10.5px; top: 2px; left: 2px; margin: auto; transition: background 0.25s linear; -webkit-transition: background 0.25s linear; }
+.dos_opciones .opcion_prop.radio_group:first-child .check {display: block; position: absolute; border: 5px solid #AAAAAA; border-radius: 100%; height: 25px; width: 25px; top: 5px; left: 30%; z-index: 8; transition: border .25s linear; -webkit-transition: border .25s linear;}
+.dos_opciones .opcion_prop.radio_group:last-child .check::before { display: block; position: absolute; content: ''; border-radius: 100%; height: 10.5px; width: 10.5px; top: 2px; left: 2px; margin: auto; transition: background 0.25s linear; -webkit-transition: background 0.25s linear; }
+.dos_opciones .opcion_prop.radio_group:last-child .check {display: block; position: absolute; border: 5px solid #AAAAAA; border-radius: 100%; height: 25px; width: 25px; top: 5px; left: 13%; z-index: 8; transition: border .25s linear; -webkit-transition: border .25s linear;}
+
+.tres_opciones .opcion_prop.radio_group .check::before { display: block; position: absolute; content: ''; border-radius: 100%; height: 10.5px; width: 10.5px; top: 2px; left: 2px; margin: auto; transition: background 0.25s linear; -webkit-transition: background 0.25s linear; }
+.tres_opciones .opcion_prop.radio_group .check {display: block; position: absolute; border: 5px solid #AAAAAA; border-radius: 100%; height: 25px; width: 25px; top: 5px; left: 13%; z-index: 8; transition: border .25s linear; -webkit-transition: border .25s linear;}
 
 .quiniela_single .quiniela_registro_overlay {position: fixed; top: 0px; padding-top: 200px; width: 95%; background: url('images/bg_trans_negro.png') repeat;  }
 .quiniela_registro {width: 100%; margin: 0 auto; border: 1px solid #8A8A8D; padding: 20px 10px; border-radius: 3px; background: #000;}
@@ -519,7 +526,7 @@ a.link_wrapper {color: inherit; text-decoration: none;}
 .tabs_quiniela ul li.selected {background: #598D16;}
 .tabs_quiniela ul li a {text-decoration: none; color: #fff;}
 
-.radio_group {width: 100%; background: #000; padding: 10px; text-align: center;}
+.radio_group {width: 100%; background: #000; padding: 5px; text-align: center;}
 .radio_group ul {margin: 20px 0 20px 0; padding: 0px; list-style: none;}
 .radio_group ul li {display: block; margin-bottom: 10px; width: 100%; position: relative;}
 .radio_group ul li input {float: left; margin-right: 10px;}
