--- a/www/maqueta/style.css
+++ b/www/maqueta/style.css
@@ -308,21 +308,25 @@ a.link_wrapper {color: inherit; text-decoration: none;}
 .quiniela_single .props .prop .tres_opciones .opcion_prop {position: relative; width: 33.33%; text-align: center; float: left; padding-left: 5%;}
 .quiniela_single .props .prop .tres_opciones .opcion_prop input {margin-right: 10px;}
 .quiniela_single .props .prop .tres_opciones .opcion_prop img {margin-right: 5px; margin-left: 33%;}
-.quiniela_single .props .prop .cuatro_opciones .opcion_prop {width: 25%; text-align: center; float: left; padding-left: 2.5%;}
+.quiniela_single .props .prop .cuatro_opciones .opcion_prop {position: relative; width: 25%; text-align: center; float: left; padding-left: 2.5%;}
 .quiniela_single .props .prop .cuatro_opciones .opcion_prop input {margin-right: 5px;}
-.quiniela_single .props .prop .cuatro_opciones .opcion_prop img {margin-right: 5px;}
+.quiniela_single .props .prop .cuatro_opciones .opcion_prop img {margin-right: 5px; margin-left: 10%;}
+.quiniela_single .props .prop .cuatro_opciones .opcion_prop span {margin-left: 55%; padding-top: 5%;}
 
 .quiniela_single .desempates {width: 100%; border-top: 1px solid #77BC1F;}
 .quiniela_single .desempates h3 {font-weight: 300; margin-top: 10px; margin-bottom: 20px; text-align: center; font-size: 12px; border-bottom: 1px solid #8A8A8D; padding-bottom: 10px;}
 .quiniela_single .desempates .desempate {width: 100%; margin-bottom: 20px;}
 .quiniela_single .desempates .desempate .desempate_left {width: 50%; float: left;}
 .quiniela_single .desempates .desempate span {padding-top: 10px; display: block; float: left;}
-.quiniela_single .desempates .desempate .desempate_input {width: 40%; float: right;}
+.quiniela_single .desempates .desempate .desempate_input {width: 40%; float: right; position: relative;}
 .quiniela_single .desempates .desempate .desempate_input input[type="text"] {background: transparent; border-radius: 5px; border: 1px solid #8A8A8D; height: 30px; color: #fff; font-weight: 300; font-family: 'Lato'; padding: 5px; }
 .quiniela_single .desempates .desempate.desempate_uno .desempate_input span {float: left; margin-right: 5px; padding-top: 7px;}
 .quiniela_single .desempates .desempate.desempate_uno .desempate_input input[type="text"] {width: 30px; float: left; margin-right: 5px;}
 .quiniela_single .desempates .desempate.desempate_tres .desempate_input input[type="radio"] {width: 30px; float: left; margin-right: 5px; margin-top: 10px; }
 
+.quiniela_single .desempates .desempate.desempate_tres .desempate_tres_left {width: 50%; float: left; position: relative;}
+.quiniela_single .desempates .desempate.desempate_tres .desempate_tres_right {width: 50%; float: left; position: relative;}
+/*** RADIOS ***/
 .radio_group input[type=radio] {position: absolute; visibility: hidden;}
 .radio_group input[type=radio]:checked ~ .check { border: 5px solid #598D16!important;}
 .radio_group input[type=radio]:checked ~ .check::before{ background: #598D16!important;}
@@ -342,6 +346,15 @@ a.link_wrapper {color: inherit; text-decoration: none;}
 
 .tres_opciones .opcion_prop.radio_group .check::before { display: block; position: absolute; content: ''; border-radius: 100%; height: 10.5px; width: 10.5px; top: 2px; left: 2px; margin: auto; transition: background 0.25s linear; -webkit-transition: background 0.25s linear; }
 .tres_opciones .opcion_prop.radio_group .check {display: block; position: absolute; border: 5px solid #AAAAAA; border-radius: 100%; height: 25px; width: 25px; top: 5px; left: 13%; z-index: 8; transition: border .25s linear; -webkit-transition: border .25s linear;}
+
+.cuatro_opciones .opcion_prop.radio_group .check::before { display: block; position: absolute; content: ''; border-radius: 100%; height: 10.5px; width: 10.5px; top: 2px; left: 2px; margin: auto; transition: background 0.25s linear; -webkit-transition: background 0.25s linear; }
+.cuatro_opciones .opcion_prop.radio_group .check {display: block; position: absolute; border: 5px solid #AAAAAA; border-radius: 100%; height: 25px; width: 25px; top: 5px; left: 13%; z-index: 8; transition: border .25s linear; -webkit-transition: border .25s linear;}
+
+.desempate.desempate_tres .desempate_input.radio_group .check::before { display: block; position: absolute; content: ''; border-radius: 100%; height: 10.5px; width: 10.5px; top: 2px; left: 2px; margin: auto; transition: background 0.25s linear; -webkit-transition: background 0.25s linear; }
+.desempate.desempate_tres .desempate_input.radio_group .check {display: block; position: absolute; border: 5px solid #AAAAAA; border-radius: 100%; height: 25px; width: 25px; top: 5px; left: 30%; z-index: 8; transition: border .25s linear; -webkit-transition: border .25s linear;}
+
+
+/*** RADIOS ***/
 
 .quiniela_single .quiniela_registro_overlay {position: fixed; top: 0px; padding-top: 200px; width: 95%; background: url('images/bg_trans_negro.png') repeat;  }
 .quiniela_registro {width: 100%; margin: 0 auto; border: 1px solid #8A8A8D; padding: 20px 10px; border-radius: 3px; background: #000;}
