--- a/www/css/style.css
+++ b/www/css/style.css
@@ -185,6 +185,8 @@ a.link_wrapper {color: inherit; text-decoration: none;}
 
 .quiniela_content .quiniela_info span {display: block; margin-bottom: 2px;}
 .quiniela_content .quiniela_info span.limite {color: #F6A623;}
+.quiniela_content .quiniela_info span.live {color: #77BC1F; position: relative; line-height: 1rem;}
+.quiniela_content .quiniela_info span.live::before{ color: #77BC1F; content: "•"; font-size: 2rem; line-height: 0.75rem; position: relative; vertical-align: top; }
 
 .quiniela .quiniela_content div {float: left;}
 .quiniela .quiniela_content span {display: block;}
